Closed Bug 390160 Opened 18 years ago Closed 18 years ago

"Out of memory" and "Nothing active on context" errors in Error console

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: marcia, Assigned: mrbkap)

Details

Attachments

(2 files, 3 obsolete files)

Starting seeing these errors on Friday's build. Also seen using today's build, Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.9a7pre) Gecko/200707300404 Minefield/3.0a7pre. I seem to get these errors when I am visiting yahoo.com, tchung sees them with cnn.com. Tony has confirmed this also happens on Vista when visiting cnn.com.
FWIW, there are corresponding common.css warnings generated also with the errors. Warning: Error in parsing value for property 'filter'. Declaration dropped. Source File: http://i.l.cnn.net/cnn/.element/css/2.0/common.css Line: 1439 Warning: Error in parsing value for property 'filter'. Declaration dropped. Source File: http://i.l.cnn.net/cnn/.element/css/2.0/common.css Line: 1441
This is almost certainly fallout from bug 386695. I can't reproduce it right now, but before I try to patch it, I'd like to catch it in a debugger. The CSS errors are irrelevant to this bug. Do I have to click on anything to see this at Yahoo or CNN?
Attached patch Proposed fix (obsolete) — Splinter Review
This patch should fix this bug by not calling JS_GetScopeChain if there's no JS on the stack.
Assignee: general → mrbkap
Status: NEW → ASSIGNED
Attachment #274726 - Flags: superreview?(brendan)
Attachment #274726 - Flags: review?(jst)
Comment on attachment 274726 [details] [diff] [review] Proposed fix JS_GetScopeChain could return cx->globalobject as we discussed -- I was wondering if you thought of a reason not to do that (I have a few, but they're so-so). Otherwise looks good, except that the TODO should be a FIXME citing a bug on file. /be
Attached patch Another attempt (obsolete) — Splinter Review
This even innerizes, which makes sense from an API standpoint -- if the global object doesn't have an innerObject hook (as it would be for most embedders), then we'll just return the global object, which is the head of the scope chain.
Attachment #274726 - Attachment is obsolete: true
Attachment #274847 - Flags: superreview?(jst)
Attachment #274847 - Flags: review?(brendan)
Attachment #274726 - Flags: superreview?(brendan)
Attachment #274726 - Flags: review?(jst)
Comment on attachment 274847 [details] [diff] [review] Another attempt Please comment on why cx->globalObject is being used as the default scope chain, citing JS_InitStandardClasses or really js_InitFunctionAndObjectClasses. Also, a blank line after the block-local initialized obj would be nice. /be
Comment on attachment 274847 [details] [diff] [review] Another attempt Plusing so you can plus the next patch and sr?jst it. /be
Attachment #274847 - Flags: review?(brendan) → review+
Attachment #274847 - Flags: superreview?(jst) → superreview+
Attached patch With comment (obsolete) — Splinter Review
Waiting on the tree to open again to check this in.
Attachment #274847 - Attachment is obsolete: true
Attachment #274862 - Flags: superreview+
Attachment #274862 - Flags: review+
Attached patch Updated patchSplinter Review
Oops, that last patch wasn't refreshed.
Attachment #274862 - Attachment is obsolete: true
Comment on attachment 274863 [details] [diff] [review] Updated patch This API is only used in a couple of places, and this patch does the right thing for both of those places. This will allow errors to be reported properly in more cases.
Attachment #274863 - Flags: superreview+
Attachment #274863 - Flags: review+
Attachment #274863 - Flags: approval1.9?
Attachment #274863 - Flags: approval1.9? → approval1.9+
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Flags: in-testsuite-
verified using Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.9a8pre) Gecko/200708100404 Minefield/3.0a8pre. I no longer see the two errors visiting the sites that commonly exhibited them.
Status: RESOLVED → VERIFIED
I am still experiecing this issue. This problem just started for one of our users about 2-3 weeks ago according to them. Unfortunately the error is occuring on a secured site so I cannot give anyone access to it. I verfied this problem and IE7 works fine. I am using 2.0.0.13 (latest downloadable version) on Windows XP. I attatched a screenshot just in case that helps at all. Since I can't give access to anyone here, please let me know what information or steps I can provide to help fix the problem. also in the mean time are thier previous versions of FF available for download anywhere? This system has been working for a couple years now, then all the sudden this happened....so it must be related to this build of FF.
Raymond: this bug and its fix were for the 1.9 (Firefox 3 pre-release) "trunk", not for Firefox 2.0.0.x. Please file a separate bug (feel free to cite it here). Thanks, /be
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: