Try harder to find a scope chain so that we can report exceptions when there is no code running currently. bug 390160, r=brendan sr=jst a=brendan